// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Toplyne's sendEvents destination action: all fields 1`] = `
Object {
  "events": Array [
    Object {
      "accountId": "dekONxVwkjBx]^XboxH",
      "anonymousId": "dekONxVwkjBx]^XboxH",
      "eventName": "dekONxVwkjBx]^XboxH",
      "eventProperties": Object {
        "testType": "dekONxVwkjBx]^XboxH",
      },
      "timestamp": 1612137600,
      "userId": "dekONxVwkjBx]^XboxH",
    },
  ],
}
`;

exports[`Testing snapshot for Toplyne's sendEvents destination action: required fields 1`] = `
Object {
  "events": Array [
    Object {
      "eventName": "dekONxVwkjBx]^XboxH",
      "timestamp": 1612137600,
    },
  ],
}
`;
